# daaja

./: .gitignore  README.md  README_ja.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: pytest.yml  release-drafter.yml  release.yml
daaja/: augmentor.py  resouces.py  tokenizer.py
daaja/augmentors/ner/: labelwise_token_replacement_augmentor.py  mention_replacement_augmentor.py  ner_augmentor.py  synonym_replacement_augmentor.py  (+1 more)
daaja/eda/: __init__.py  easy_data_augmentor.py  randam_delete_augmentor.py  randam_insert_augmentor.py  randam_swap_augmentor.py  run.py  synonym_replace_augmentor.py
daaja/flows/: sequential_flow.py  sequential_sequenceLabeling_flow.py  sequential_sequence_labeling_flow.py
daaja/ner_sda/: __init__.py  labelwise_token_replacement_augmentor.py  mention_replacement_augmentor.py  run.py  shuffle_within_segments_augmentor.py  simple_data_augmentation_for_ner.py  synonym_replacement_augmentor.py  utils.py
examples/: EasyDataAugmentation.ipynb  quick_example.ipynb
examples/eda/: EasyDataAugmentation_example.ipynb  README.md  create_subset.py
examples/sda_ner/: README.md  SimpleDataAugmentationforNamedEntityRecognition_example.ipynb  create_subset.py  data_augment.sh
github/workflows/: pytest.yaml
tests/: test_resouces.py
tests/eda/: test_easy_data_augmentor.py  test_randam_delete_augmentor.py  test_randam_insert_augmentor.py  test_randam_swap_augmentor.py  test_run.py  test_synonym_replace_augmentor.py
tests/sda_ner/: test_labelwise_token_replacement_augmentor.py  test_mention_replacement_augmentor.py  test_run.py  test_shuffle_within_segments_augmentor.py  test_simple_data_augmentation_for_ner.py  test_synonym_replacement_augmentor.py  test_utils.py
(+34 files in other folders)
