[tool.poetry]
name = "daaja"
version = "0.0.6"
description = "NLP data augmentation tool"
authors = ["Koga Kobayashi <kajyuuen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
requests = "^2.27.1"
SudachiPy = "^0.6.3"
SudachiDict-core = "^20211220"
numpy = ">=1.3"
pandas = ">=1.2"
tqdm = "^4.62.3"
transformers = "^4.16.2"
torch = "^1.10.2"
sentencepiece = "^0.1.96"
fugashi = "^1.1.2"
ipadic = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.0"
datasets = "^1.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
